--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
   }
 
   body {
-    @apply bg-white antialiased;
+    @apply bg-gray-100 antialiased;
     margin: 0;
     min-height: 125vh;
     font-family: var(--font-sans);
